# text_renderer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION_GUIDE.md  README.html  README.md  config.html  create_rec_lmdb_dataset.py  dataset.html  genindex.html  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  step1_clear_wiki_data.py  update.sh
.github/workflows/: main.yml  pages.yml  pytest.yml
_modules/: index.html
_modules/text_renderer/: config.html  dataset.html
_sources/: README.md.txt  config.rst.txt  dataset.rst.txt  index.rst.txt
corpus/: char_corpus.html  corpus.html  enum_corpus.html  index.html  rand_corpus.html  word_corpus.html
docker/: Dockerfile  requirements.txt  run.sh
docs/: README.md  conf.py  config.rst  index.rst
effect/: base_effect.html  brightness_contrast.html  curve.html  dropout.html  emboss.html  gaussian_blur.html  index.html  line.html  motion_blur.html  noise.html  padding.html  rotate.html  text_border.html  transform.html
example_data/: .gitignore  albumentations_example.py  chn_example.py  chn_idcard_example.py  effect_layout_example.py  eng_example.py  example.py  idcard_example.py  random_chn_idcard_example.py  vertical_example.py
layout/: base.html  extra_text_line.html  index.html  same_line.html
note/: render_pipeline.html
test_output/: labels.json
text_renderer/: __init__.py  bg_manager.py  dataset.py  font_manager.py  render.py
tools/: check_fonts.py  font_viewer.py  lmdb2img.py  prepare_effect_layout_example.py
(+96 files in other folders)
